Removed cxx gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ lib/generated_plugin_registrant.dart
 **/android/key.properties
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/.cxx/
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
